--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.13.0"
   }
 }
